fix(footer): 外部サイトへのリンクタグ修正

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,6 +8,6 @@
   </ul>
   <p class="myname">
     制作者：
-    <a href="https://twitter.com/mikatahiro">ちゃま</a>
+    <a href="https://twitter.com/mikatahiro" target="_blank">ちゃま</a>
   </p>
 </footer>
