--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -9,8 +9,9 @@
   margin: 0 0 40px 0;
   list-style-type: none;
   &__item {
-    a {
-      margin-right: 24px;
+    margin-right: 24px;
+    &:last-child {
+      margin-right: 0;
     }
   }
 }
