fix(home): 画像表示の変更 #3

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,50 +1,56 @@
 <div class="grid">
   <mat-card class="card">
-    <img
-      src="https://image.paypay.ne.jp/page/common/images/img_logo.png"
-      alt=""
+    <div
       class="card__cover"
-    />
+      style="
+        background-image: url(https://dl.dropbox.com/s/pd4yoqgwo5eflwd/paypay.jpg);
+      "
+    ></div>
     <p class="card__name">PayPay</p>
   </mat-card>
   <mat-card class="card">
-    <img
-      src="https://image.paypay.ne.jp/page/common/images/img_logo.png"
-      alt=""
+    <div
       class="card__cover"
-    />
-    <p class="card__name">PayPay</p>
+      style="
+        background-image: url(https://dl.dropbox.com/s/xowc9apk4itkep6/linepay-logo-jp-gl.png);
+      "
+    ></div>
+    <p class="card__name">LINEPay</p>
   </mat-card>
   <mat-card class="card">
-    <img
-      src="https://image.paypay.ne.jp/page/common/images/img_logo.png"
-      alt=""
+    <div
       class="card__cover"
-    />
-    <p class="card__name">PayPay</p>
+      style="
+        background-image: url(https://dl.dropbox.com/s/a9ujltn0uy8lypg/merpay_201911_postpay_01.png);
+      "
+    ></div>
+    <p class="card__name">merPay</p>
   </mat-card>
   <mat-card class="card">
-    <img
-      src="https://image.paypay.ne.jp/page/common/images/img_logo.png"
-      alt=""
+    <div
       class="card__cover"
-    />
-    <p class="card__name">PayPay</p>
+      style="
+        background-image: url(https://dl.dropbox.com/s/6d30u9fm7i0dqvs/rakuten_pay_logo-973x584.jpg);
+      "
+    ></div>
+    <p class="card__name">楽天Pay</p>
   </mat-card>
   <mat-card class="card">
-    <img
-      src="https://image.paypay.ne.jp/page/common/images/img_logo.png"
-      alt=""
+    <div
       class="card__cover"
-    />
-    <p class="card__name">PayPay</p>
+      style="
+        background-image: url(https://dl.dropbox.com/s/bd08m01xw5uhgee/aupay-min-768x402.png);
+      "
+    ></div>
+    <p class="card__name">auPAY</p>
   </mat-card>
   <mat-card class="card">
-    <img
-      src="https://image.paypay.ne.jp/page/common/images/img_logo.png"
-      alt=""
+    <div
       class="card__cover"
-    />
-    <p class="card__name">PayPay</p>
+      style="
+        background-image: url(https://dl.dropbox.com/s/cpx6cenaifyav3h/alipay-1024x640.jpg);
+      "
+    ></div>
+    <p class="card__name">ALIPAY</p>
   </mat-card>
 </div>
