--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,12 @@
 <app-header></app-header>
 
-<router-outlet></router-outlet>
-
-<app-footer></app-footer>
+<mat-sidenav-container>
+  <mat-sidenav mode="side" opened
+    >Sidenav content
+    <p>ここにカードのリストなどを表示します</p>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+  </mat-sidenav-content>
+</mat-sidenav-container>
