--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,12 @@
 <header class="header">
-  <h1 class="header__logo">電子決済ポータルサイト（仮）</h1>
+  <div class="header__left">
+    <button class="mat-nav" mat-icon-button>
+      <mat-icon>menu</mat-icon>
+    </button>
+    <a routerLink="/" href="/" class="logo">
+      <h1 class="">電子決済ポータルサイト（仮）</h1>
+    </a>
+  </div>
   <input class="header__input" type="text" />
   <button class="header__button">
     <mat-icon>search</mat-icon>
