fix(header): タグの属性とクラスの親子関係修正 #6

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
     <button class="mat-nav" mat-icon-button>
       <mat-icon>menu</mat-icon>
     </button>
-    <a routerLink="/" href="/" class="logo">
+    <a routerLink="/" class="logo">
       <h1 class="">電子決済ポータルサイト（仮）</h1>
     </a>
   </div>
