feature(drawer): サイドナビゲーション開閉の機能追加

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="header__left">
-    <button class="mat-nav" mat-icon-button>
+    <button class="mat-nav" (click)="toggle()" mat-icon-button>
       <mat-icon>menu</mat-icon>
     </button>
     <a routerLink="/" class="logo">
