--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
 <mat-sidenav-container>
-  <mat-sidenav mode="side" opened
+  <mat-sidenav mode="side" [opened]="isOpened$ | async"
     >Sidenav content
     <p>ここにカードのリストなどを表示します</p>
   </mat-sidenav>
