--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -9,12 +9,31 @@
     font-size: 8px;
     padding-left: 24px;
   }
+}
+
+.search {
+  position: relative;
+  flex: 1;
   &__input {
-    margin: 16px;
-    flex: 1;
+    display: block;
+    width: 100%;
+    outline: none;
+    line-height: 30px;
+    padding: 0 40px 0 8px;
+    box-sizing: border-box;
+    border-radius: 3px;
+    border: 1px solid #25202075;
   }
   &__button {
+    position: absolute;
+    top: 3px;
+    right: 8px;
     cursor: pointer;
+    background: none;
+    border: none;
+    outline: none;
+    height: 30px;
+    width: 30px;
   }
 }
 
