style(header): インデント修正 #14

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,8 +12,7 @@
       class="search__input"
       type="text"
       placeholder="検索"
-      autocomplete="off
-    "
+      autocomplete="off"
       [formControl]="search"
     />
     <button class="search__button">
