feat(login): ログイン機能実装 #16

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,7 +22,12 @@
     </form>
     <div class="btns">
       <button class="btns__item" mat-flat-button color="primary">追加</button>
-      <button class="btns__item" mat-flat-button color="primary">
+      <button
+        class="btns__item"
+        mat-flat-button
+        color="primary"
+        (click)="login()"
+      >
         ログイン
       </button>
     </div>
