--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -53,4 +53,12 @@
   &__item {
     margin-left: 16px;
   }
+  &__icon {
+    margin-left: 16px;
+    background: 50% / cover;
+    box-shadow: none;
+    img {
+      border-radius: 50%;
+    }
+  }
 }
