fix(header): アバターのcss修正 #31

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -55,7 +55,7 @@
   }
   &__icon {
     margin-left: 16px;
-    background: 50% / cover;
+    background: center / cover;
     box-shadow: none;
     img {
       border-radius: 50%;
