--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,9 +23,12 @@
 
     <div *ngIf="user$ | async as user; else default" class="btns">
       <button class="btns__item" mat-flat-button color="primary">追加</button>
-      <button class="btns__icon" mat-mini-fab [matMenuTriggerFor]="avatar">
-        <img [src]="user.photoURL" alt="" />
-      </button>
+      <button
+        class="btns__icon"
+        mat-mini-fab
+        [matMenuTriggerFor]="avatar"
+        [style.background-image]="'url(' + user.photoURL + ')'"
+      ></button>
       <mat-menu #avatar="matMenu">
         <button mat-menu-item (click)="logout()">ログアウト</button>
         <button mat-menu-item>Help</button>
