--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -43,6 +43,10 @@
           <mat-icon>help</mat-icon>
           <span>使い方</span>
         </button>
+        <button mat-menu-item>
+          <mat-icon>attach_money</mat-icon>
+          <span>広告を剥がす</span>
+        </button>
       </mat-menu>
     </div>
     <ng-template #default>
