--- a/src/app/create/form/form.component.html
+++ b/src/app/create/form/form.component.html
@@ -1,1 +1,57 @@
-<p>共通する作成機能</p>
+<form [formGroup]="form" (ngSubmit)="getResult()">
+  <div class="common">
+    <mat-form-field class="common__content" appearance="fill">
+      <mat-label>サービス名</mat-label>
+      <input
+        matInput
+        placeholder="サービス名を入力してください（20文字以内）"
+        formControlName="name"
+        required
+      />
+      <mat-error *ngIf="nameControl.hasError('required')"
+        >必須入力です</mat-error
+      >
+      <mat-error *ngIf="nameControl.hasError('maxlength')"
+        >長すぎます</mat-error
+      >
+    </mat-form-field>
+    <mat-form-field class="common__content" appearance="fill">
+      <mat-label>サービスのイメージ画像</mat-label>
+      <input
+        matInput
+        placeholder="画像のURLを貼ってください"
+        formControlName="image"
+        required
+      />
+      <mat-error *ngIf="imageControl.hasError('required')"
+        >必須入力です</mat-error
+      >
+    </mat-form-field>
+    <mat-form-field class="common__content" appearance="fill">
+      <mat-label>ポイント（通常時）</mat-label>
+      <input
+        matInput
+        placeholder="数字を入力してください"
+        formControlName="point"
+      />
+      <span matSuffix>%</span>
+    </mat-form-field>
+    <mat-form-field class="common__content" appearance="fill">
+      <mat-label>ポイント / 追加情報</mat-label>
+      <textarea
+        matInput
+        placeholder="追加情報などを入力してください"
+        formControlName="addPoint"
+      ></textarea>
+    </mat-form-field>
+    <mat-form-field class="common__content" appearance="fill">
+      <mat-label>使えるお店の名前</mat-label>
+      <input matInput formControlName="storeName" />
+    </mat-form-field>
+    <mat-form-field class="common__content" appearance="fill">
+      <mat-label>お店のイメージ画像</mat-label>
+      <input matInput formControlName="storeImage" />
+    </mat-form-field>
+    <button mat-raised-button color="primary">追加する</button>
+  </div>
+</form>
