fix(form): 投稿画面修正 #38

--- a/src/app/create/form/form.component.html
+++ b/src/app/create/form/form.component.html
@@ -7,6 +7,7 @@
       <input
         matInput
         placeholder="サービス名を入力してください（20文字以内）"
+        autocomplete="off"
         formControlName="name"
         required
       />
@@ -22,6 +23,7 @@
       <input
         matInput
         placeholder="画像のURLを貼ってください"
+        autocomplete="off"
         formControlName="image"
         required
       />
@@ -34,6 +36,7 @@
       <input
         matInput
         placeholder="数字を入力してください"
+        autocomplete="off"
         formControlName="point"
       />
       <span matSuffix>%</span>
@@ -43,44 +46,103 @@
       <textarea
         matInput
         placeholder="追加情報などを入力してください"
+        autocomplete="off"
         formControlName="addPoint"
       ></textarea>
     </mat-form-field>
     <mat-form-field class="common__content" appearance="fill">
       <mat-label>残高やポイントの有効期限</mat-label>
-      <textarea matInput formControlName="expiration"></textarea>
+      <textarea
+        matInput
+        autocomplete="off"
+        formControlName="expiration"
+      ></textarea>
     </mat-form-field>
     <mat-form-field class="common__content" appearance="fill">
       <mat-label>使えるお店の名前</mat-label>
-      <input matInput formControlName="storeName" />
+      <input matInput autocomplete="off" formControlName="storeName" required />
     </mat-form-field>
     <mat-form-field class="common__content" appearance="fill">
       <mat-label>お店のイメージ画像</mat-label>
-      <input matInput formControlName="storeImage" />
+      <input
+        matInput
+        autocomplete="off"
+        formControlName="storeImage"
+        required
+      />
     </mat-form-field>
     <h2>QRcodeにしかない作成機能</h2>
     <ng-container [ngSwitch]="type">
       <ng-container *ngSwitchCase="'qrCode'">
         <mat-form-field class="common__content" appearance="fill">
           <mat-label>チャージ方法</mat-label>
-          <textarea matInput formControlName="charge"></textarea>
+          <textarea
+            matInput
+            autocomplete="off"
+            formControlName="charge"
+            required
+          ></textarea>
         </mat-form-field>
-        <mat-form-field class="common__content" appearance="fill">
-          <mat-label>オートチャージ</mat-label>
-          <input matInput formControlName="autoCharge" />
-        </mat-form-field>
-        <mat-form-field class="common__content" appearance="fill">
-          <mat-label>利用可能なクレジットカード</mat-label>
-          <textarea matInput formControlName="availableCredit"></textarea>
-        </mat-form-field>
-        <mat-form-field class="common__content" appearance="fill">
-          <mat-label>個人間送金</mat-label>
-          <input matInput formControlName="pushMoney" />
-        </mat-form-field>
-        <mat-form-field class="common__content" appearance="fill">
-          <mat-label>出金</mat-label>
-          <input matInput formControlName="pullMoney" />
-        </mat-form-field>
+
+        <div class="qr-code">
+          <mat-label class="qr-code__label">オートチャージ</mat-label>
+          <mat-radio-group
+            formControlName="autoCharge"
+            class="qr-code__radio-group"
+          >
+            <mat-radio-button
+              *ngFor="let chargePattern of chargePatterns"
+              [value]="chargePattern"
+              class="qr-code__radio-button"
+              required
+              >{{ chargePattern }}</mat-radio-button
+            >
+          </mat-radio-group>
+        </div>
+
+        <div class="qr-code">
+          <mat-label class="qr-code__label"
+            >利用可能なクレジットカード</mat-label
+          >
+          <mat-checkbox
+            *ngFor="let creditPattern of creditPatterns"
+            formControlName="availableCredit"
+            [value]="creditPattern"
+            class="qr-code__checkbox"
+            required
+            >{{ creditPattern }}</mat-checkbox
+          >
+        </div>
+        <div class="qr-code">
+          <mat-label class="qr-code__label">個人間送金</mat-label>
+          <mat-radio-group
+            formControlName="pushMoney"
+            class="qr-code__radio-group"
+          >
+            <mat-radio-button
+              *ngFor="let simplePattern of simplePatterns"
+              [value]="simplePattern"
+              class="qr-code__radio-button"
+              required
+              >{{ simplePattern }}</mat-radio-button
+            >
+          </mat-radio-group>
+        </div>
+        <div class="qr-code">
+          <mat-label class="qr-code__label">出金</mat-label>
+          <mat-radio-group
+            formControlName="pullMoney"
+            class="qr-code__radio-group"
+          >
+            <mat-radio-button
+              *ngFor="let simplePattern of simplePatterns"
+              [value]="simplePattern"
+              class="qr-code__radio-button"
+              required
+              >{{ simplePattern }}</mat-radio-button
+            >
+          </mat-radio-group>
+        </div>
       </ng-container>
       <ng-container *ngSwitchDefault>output2</ng-container>
     </ng-container>
