--- a/src/app/drawer/drawer.component.html
+++ b/src/app/drawer/drawer.component.html
@@ -1,6 +1,6 @@
 <mat-list dense>
   <mat-nav-list>
-    <a mat-list-item routerLink="/">QRコード決済</a>
+    <a mat-list-item routerLink="/code-card">QRコード決済</a>
     <a mat-list-item routerLink="">クレジットカード</a>
     <a mat-list-item routerLink="">NFC</a>
     <a mat-list-item routerLink="">ポイントカード</a>
