feat(code-card): カードデータの取得 #41

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,9 @@ img {
 }
 
 .card {
+  &__trigger {
+    cursor: pointer;
+  }
   &__cover {
     background: center/cover;
     padding-bottom: 52.5%;
