feat(code-card): aタグ追加 #45

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,7 +24,10 @@ img {
 
 .card {
   &__trigger {
+    display: block;
     cursor: pointer;
+    text-decoration: none;
+    color: inherit;
   }
   &__cover {
     background: center/cover;
