--- a/src/app/code-card/code-card/code-card.component.html
+++ b/src/app/code-card/code-card/code-card.component.html
@@ -1,6 +1,6 @@
 <div class="grid">
   <mat-card *ngFor="let codeCard of codeCards$ | async" class="card">
-    <a class="card__trigger" routerLink="/detail">
+    <a class="card__trigger" routerLink="/code-detail/{{ codeCard.cardId }}">
       <div
         class="card__cover"
         [style.background-image]="'url(' + codeCard.iamge + ')'"
