--- a/src/app/create/form/form.component.html
+++ b/src/app/create/form/form.component.html
@@ -106,7 +106,7 @@
           <textarea
             matInput
             autocomplete="off"
-            formControlName="expiration"
+            formControlName="availableCredit"
             required
           ></textarea>
         </mat-form-field>
@@ -144,7 +144,7 @@
       </ng-container>
       <ng-container *ngSwitchDefault>output2</ng-container>
     </ng-container>
-    <button [disabled]="form.pristine" mat-raised-button color="primary">
+    <button [disabled]="form.invalid" mat-raised-button color="primary">
       追加する
     </button>
   </div>
