feat(store): 利用店舗の表示(online) #50

--- a/src/app/code-detail/code-detail/code-detail.component.html
+++ b/src/app/code-detail/code-detail/code-detail.component.html
@@ -37,12 +37,18 @@
           <div class="store__cover">
             <img [src]="codeCard.storeImage" alt="セブンイレブンの画像" />
           </div>
-          <p>{{ codeCard.storeName }}</p>
           <div *ngFor="let store of stores" class="store__cover">
             <img src="assets/images/{{ store.id }}.png" alt="" />
           </div>
         </mat-tab>
-        <mat-tab label="オンライン"> Content 2 </mat-tab>
+        <mat-tab label="オンライン">
+          <div class="grid">
+            <div *ngFor="let onlineStore of onlineStores" class="store__cover">
+              <img src="assets/images/online/{{ onlineStore.id }}.png" alt="" />
+              <p>{{ onlineStore.name }}</p>
+            </div>
+          </div>
+        </mat-tab>
         <mat-tab label="請求書"> Content 3 </mat-tab>
       </mat-tab-group>
     </div>
