--- a/src/app/code-detail/code-detail/code-detail.component.html
+++ b/src/app/code-detail/code-detail/code-detail.component.html
@@ -49,7 +49,14 @@
             </div>
           </div>
         </mat-tab>
-        <mat-tab label="請求書"> Content 3 </mat-tab>
+        <mat-tab label="請求書">
+          <div class="grid">
+            <div *ngFor="let invoice of invoices" class="store__cover">
+              <img src="assets/images/invoice/{{ invoice.id }}.png" alt="" />
+              <p>{{ invoice.name }}</p>
+            </div>
+          </div>
+        </mat-tab>
       </mat-tab-group>
     </div>
   </div>
