--- a/src/app/code-detail/code-detail/code-detail.component.html
+++ b/src/app/code-detail/code-detail/code-detail.component.html
@@ -34,23 +34,41 @@
       <h2 class="store__title">使えるお店</h2>
       <mat-tab-group mat-align-tabs="center">
         <mat-tab label="実店舗">
-          <div *ngFor="let store of stores" class="store__cover">
-            <img src="assets/images/{{ store.id }}.png" alt="" />
+          <div class="grid">
+            <div
+              *ngFor="let store of codeCard.storeIds | idToStore: 'real'"
+              class="store__cover"
+            >
+              <img src="assets/images/{{ store.id }}.png" alt="実店舗の画像" />
+              <p>{{ store.name }}</p>
+            </div>
           </div>
         </mat-tab>
         <mat-tab label="オンライン">
           <div class="grid">
-            <div *ngFor="let onlineStore of onlineStores" class="store__cover">
-              <img src="assets/images/online/{{ onlineStore.id }}.png" alt="" />
-              <p>{{ onlineStore.name }}</p>
+            <div
+              *ngFor="let store of codeCard.storeIds | idToStore: 'online'"
+              class="store__cover"
+            >
+              <img
+                src="assets/images/online/{{ store.id }}.png"
+                alt="オンライン店舗の画像"
+              />
+              <p>{{ store.name }}</p>
             </div>
           </div>
         </mat-tab>
         <mat-tab label="請求書">
           <div class="grid">
-            <div *ngFor="let invoice of invoices" class="store__cover">
-              <img src="assets/images/invoice/{{ invoice.id }}.png" alt="" />
-              <p>{{ invoice.name }}</p>
+            <div
+              *ngFor="let store of codeCard.storeIds | idToStore: 'invoice'"
+              class="store__cover"
+            >
+              <img
+                src="assets/images/invoice/{{ store.id }}.png"
+                alt="請求書の画像"
+              />
+              <p>{{ store.name }}</p>
             </div>
           </div>
         </mat-tab>
