--- a/src/app/code-card/code-card/code-card.component.html
+++ b/src/app/code-card/code-card/code-card.component.html
@@ -3,7 +3,7 @@
     <a class="card__trigger" routerLink="/code-detail/{{ codeCard.cardId }}">
       <div
         class="card__cover"
-        [style.background-image]="'url(' + codeCard.iamge + ')'"
+        [style.background-image]="'url(' + codeCard.image + ')'"
       ></div>
       <p class="card__name">{{ codeCard.name }}</p>
     </a>
