feat(form): 削除ボタンにdialog機能追加 #51

--- a/src/app/create/form/form.component.html
+++ b/src/app/create/form/form.component.html
@@ -201,7 +201,7 @@
           mat-raised-button
           color="warn"
           type="button"
-          (click)="deleteCard()"
+          (click)="openDeleteCardDialog()"
         >
           削除する
         </button>
