--- a/src/app/create/form/form.component.html
+++ b/src/app/create/form/form.component.html
@@ -46,24 +46,30 @@
         required
       />
       <span matSuffix>%</span>
+      <mat-error *ngIf="pointControl.hasError('required')"
+        >必須入力です</mat-error
+      >
     </mat-form-field>
-    <mat-form-field class="common__content" appearance="fill">
+    <mat-form-field
+      class="common__content"
+      hintLabel="(例) ○○カード利用時+1%"
+      appearance="fill"
+    >
       <mat-label>ポイント / 追加情報</mat-label>
       <textarea
         matInput
-        placeholder="追加情報などを入力してください"
+        placeholder="ポイントの追加情報がある場合は入力してください"
         autocomplete="off"
         formControlName="addPoint"
       ></textarea>
     </mat-form-field>
-    <mat-form-field class="common__content" appearance="fill">
+    <mat-form-field
+      class="common__content"
+      hintLabel="(例) 最終利用日から○○年間"
+      appearance="fill"
+    >
       <mat-label>残高やポイントの有効期限</mat-label>
-      <textarea
-        matInput
-        autocomplete="off"
-        formControlName="expiration"
-        required
-      ></textarea>
+      <textarea matInput formControlName="expiration" required></textarea>
     </mat-form-field>
 
     <mat-form-field class="common__chip-list">
