--- a/src/app/drawer/drawer.component.html
+++ b/src/app/drawer/drawer.component.html
@@ -1,9 +1,29 @@
 <mat-list dense>
   <mat-nav-list>
-    <a mat-list-item routerLink="/code-card">QRコード決済</a>
-    <a mat-list-item routerLink="">クレジットカード</a>
-    <a mat-list-item routerLink="">NFC</a>
-    <a mat-list-item routerLink="">ポイントカード</a>
+    <a mat-list-item routerLink="/code-card">
+      <div class="icon">
+        <img src="/assets/images/icons/code.png" alt="" />
+      </div>
+      <p>モバイル決済</p></a
+    >
+    <a mat-list-item routerLink="">
+      <div class="icon">
+        <img src="/assets/images/icons/ic.png" alt="" />
+      </div>
+      <p>電子マネー</p>
+    </a>
+    <a mat-list-item routerLink="">
+      <div class="icon">
+        <img src="/assets/images/icons/credit.png" alt="" />
+      </div>
+      <p>クレジットカード</p>
+    </a>
+    <a mat-list-item routerLink="">
+      <div class="icon">
+        <img src="/assets/images/icons/point2.png" alt="" />
+      </div>
+      <p>ポイントカード</p>
+    </a>
     <mat-divider></mat-divider>
     <a mat-list-item routerLink="">比較する</a>
     <a mat-list-item routerLink="">キャンペーン情報</a>
