--- a/src/app/drawer/drawer.component.html
+++ b/src/app/drawer/drawer.component.html
@@ -2,25 +2,28 @@
   <mat-nav-list>
     <a mat-list-item routerLink="/code-card">
       <div class="icon">
-        <img src="/assets/images/icons/code.png" alt="" />
+        <img src="/assets/images/icons/code.png" alt="バーコードの画像" />
       </div>
       <p>モバイル決済</p></a
     >
     <a mat-list-item routerLink="">
       <div class="icon">
-        <img src="/assets/images/icons/ic.png" alt="" />
+        <img src="/assets/images/icons/ic.png" alt="ICカードの画像" />
       </div>
       <p>電子マネー</p>
     </a>
     <a mat-list-item routerLink="">
       <div class="icon">
-        <img src="/assets/images/icons/credit.png" alt="" />
+        <img
+          src="/assets/images/icons/credit.png"
+          alt="クレジットカードの画像"
+        />
       </div>
       <p>クレジットカード</p>
     </a>
     <a mat-list-item routerLink="">
       <div class="icon">
-        <img src="/assets/images/icons/point2.png" alt="" />
+        <img src="/assets/images/icons/point2.png" alt="ポイントカードの画像" />
       </div>
       <p>ポイントカード</p>
     </a>
