--- a/src/app/drawer/drawer.component.html
+++ b/src/app/drawer/drawer.component.html
@@ -2,28 +2,25 @@
   <mat-nav-list>
     <a mat-list-item routerLink="/code-card">
       <div class="icon">
-        <img src="/assets/images/icons/code.png" alt="バーコードの画像" />
+        <img src="/assets/images/icons/code.png" alt="" />
       </div>
       <p>モバイル決済</p></a
     >
     <a mat-list-item routerLink="">
       <div class="icon">
-        <img src="/assets/images/icons/ic.png" alt="ICカードの画像" />
+        <img src="/assets/images/icons/ic.png" alt="" />
       </div>
       <p>電子マネー</p>
     </a>
     <a mat-list-item routerLink="">
       <div class="icon">
-        <img
-          src="/assets/images/icons/credit.png"
-          alt="クレジットカードの画像"
-        />
+        <img src="/assets/images/icons/credit.png" alt="" />
       </div>
       <p>クレジットカード</p>
     </a>
     <a mat-list-item routerLink="">
       <div class="icon">
-        <img src="/assets/images/icons/point2.png" alt="ポイントカードの画像" />
+        <img src="/assets/images/icons/point2.png" alt="" />
       </div>
       <p>ポイントカード</p>
     </a>
