--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,82 +1,80 @@
 <mat-toolbar class="header">
-  <mat-toolbar-row>
-    <div class="header__left">
-      <button class="menu" (click)="toggle()" mat-icon-button>
-        <mat-icon>menu</mat-icon>
-      </button>
-      <a routerLink="/" class="logo">
-        <h1 class="">PAYpick</h1>
-      </a>
-    </div>
-    <form class="search">
-      <input
-        class="search__input"
-        type="text"
-        placeholder="検索"
-        autocomplete="off"
-        [formControl]="search"
-      />
-      <button class="search__button">
-        <mat-icon>search</mat-icon>
-      </button>
-    </form>
+  <div class="header__left">
+    <button class="menu" (click)="toggle()" mat-icon-button>
+      <mat-icon>menu</mat-icon>
+    </button>
+    <a routerLink="/" class="logo">
+      <h1 class="">PAYpick</h1>
+    </a>
+  </div>
+  <form class="search">
+    <input
+      class="search__input"
+      type="text"
+      placeholder="使えるお店を検索"
+      autocomplete="off"
+      [formControl]="search"
+    />
+    <button class="search__button">
+      <mat-icon>search</mat-icon>
+    </button>
+  </form>
 
-    <div *ngIf="user$ | async as user; else default" class="btns">
+  <div *ngIf="user$ | async as user; else default" class="btns">
+    <button
+      class="btns__item"
+      mat-flat-button
+      color="primary"
+      [mat-menu-trigger-for]="addition"
+    >
+      追加
+    </button>
+    <mat-menu #addition="matMenu">
       <button
-        class="btns__item"
-        mat-flat-button
-        color="primary"
-        [mat-menu-trigger-for]="addition"
+        [routerLink]="['/create/form']"
+        [queryParams]="{ type: 'qrCode' }"
+        mat-menu-item
       >
-        追加
+        QRcode
       </button>
-      <mat-menu #addition="matMenu">
-        <button
-          [routerLink]="['/create/form']"
-          [queryParams]="{ type: 'qrCode' }"
-          mat-menu-item
-        >
-          QRcode
-        </button>
-        <button mat-menu-item>クレジットカード</button>
-        <button mat-menu-item>交通系電子マネー</button>
-        <button mat-menu-item>ポイントカード</button>
-      </mat-menu>
-      <button
-        class="btns__icon"
-        mat-mini-fab
-        [matMenuTriggerFor]="avatar"
-        [style.background-image]="'url(' + user.photoURL + ')'"
-      ></button>
-      <mat-menu #avatar="matMenu">
-        <button mat-menu-item (click)="logout()">
-          <mat-icon>exit_to_app</mat-icon>
-          <span>ログアウト</span>
-        </button>
-        <mat-divider></mat-divider>
-        <button mat-menu-item>
-          <mat-icon>settings</mat-icon>
-          <span>設定</span>
-        </button>
-        <button mat-menu-item>
-          <mat-icon>help</mat-icon>
-          <span>使い方</span>
-        </button>
-        <button mat-menu-item>
-          <mat-icon>attach_money</mat-icon>
-          <span>広告を剥がす</span>
-        </button>
-      </mat-menu>
-    </div>
-    <ng-template #default>
-      <button
-        class="btns__item"
-        mat-flat-button
-        color="primary"
-        (click)="login()"
-      >
-        ログイン
+      <button mat-menu-item>クレジットカード</button>
+      <button mat-menu-item>交通系電子マネー</button>
+      <button mat-menu-item>ポイントカード</button>
+    </mat-menu>
+    <button
+      class="btns__icon"
+      mat-mini-fab
+      [matMenuTriggerFor]="avatar"
+      [style.background-image]="'url(' + user.photoURL + ')'"
+    ></button>
+    <mat-menu #avatar="matMenu">
+      <button mat-menu-item (click)="logout()">
+        <mat-icon>exit_to_app</mat-icon>
+        <span>ログアウト</span>
       </button>
-    </ng-template>
-  </mat-toolbar-row>
+      <mat-divider></mat-divider>
+      <button mat-menu-item>
+        <mat-icon>settings</mat-icon>
+        <span>設定</span>
+      </button>
+      <button mat-menu-item>
+        <mat-icon>help</mat-icon>
+        <span>使い方</span>
+      </button>
+      <button mat-menu-item>
+        <mat-icon>attach_money</mat-icon>
+        <span>広告を剥がす</span>
+      </button>
+    </mat-menu>
+  </div>
+  <ng-template #default>
+    <button
+      class="btns__item"
+      mat-flat-button
+      color="primary"
+      (click)="login()"
+    >
+      ログイン
+    </button>
+  </ng-template>
 </mat-toolbar>
