--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -2,9 +2,12 @@
 
 .header {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
+  padding: 8px 16px;
   align-items: center;
   border-bottom: 1px solid rgba(black, 0.38);
+  height: auto;
   &__left {
     display: flex;
     align-items: center;
@@ -15,7 +18,8 @@
 
 .search {
   position: relative;
-  flex: 1;
+  width: 360px;
+  max-width: 100%;
   &__input {
     display: block;
     width: 100%;
@@ -36,6 +40,11 @@
     outline: none;
     height: 30px;
     width: 30px;
+  }
+  @include sp {
+    order: 5;
+    width: 100%;
+    margin-top: 8px;
   }
 }
 
